updated table format

--- a/research/index.html
+++ b/research/index.html
@@ -24,11 +24,10 @@ title: Easton R. White | Research
 <br>
 <p><a name="COVID_Fisheries"></a></p>
 <h2>COVID-19 pandemic and global fisheries</h2>
-<p>Building on my work in both <a href="https://eastonwhite.github.io/covid19/">COVID-19 modeling</a> and marine fisheries, I am now collaborating with several people on how COVID-19 might affect fisheries and fishing communities. The last time we experienced a reduction in fishing effort of this magnitude was during both world wars when oceans were effectively closed to fishing. In response to the COVID-19 pandemic, governments have shut down various parts of their economies to promote social distancing. Already, fishing seasons have been cut short or certain types of fishing (e.g. commercial versus recreational) have been restricted. However, these government actions vary between and within countries (White & Hébert-Dufresne 2020). This presents another natural experiment to see how fish populations and fisheries respond to management interventions. 
 
 <table align="right">
   <tr>
-    <th><span style="font-weight:bold">Recent articles on COVID-19 and fisheries</span></th>
+    <th><style="font-weight:bold">Recent news articles on COVID-19 and fisheries</th>
   </tr>
   <tr>
     <td><a href="https://www.smithsonianmag.com/science-nature/fish-stop-covid-19-180974623/">With Boats Stuck in Harbor Because of COVID-19, Will Fish Bounce Back?</a></td>
@@ -37,12 +36,16 @@ title: Easton R. White | Research
     <td><a href="https://asafishing.org/keep-america-fishing-covid-19/">COVID-19 and US recreational fishing</a></td>
   </tr>
   <tr>
-    <td><a href="https://www.csis.org/analysis/covid-19-sea-impacts-blue-economy-ocean-health-and-ocean-security">Covid-19 at Sea: Impacts on the Blue Economy, Ocean Health, and Ocean Security</a></td>
+    <td><a href="https://www.csis.org/analysis/covid-19-sea-impacts-blue-economy-ocean-health-and-ocean-security">Covid-19: Impacts on the Blue Economy, Ocean Health, and Ocean Security</a></td>
   </tr>
   <tr>
     <td><a href="https://www.seafoodsource.com/news/supply-trade/small-scale-fishermen-suffering-significantly-from-covid-19-pandemic">Small-scale fishermen suffering significantly from COVID-19 pandemic</a></td>
   </tr>
 </table>
+	    
+<p>Building on my work in both <a href="https://eastonwhite.github.io/covid19/">COVID-19 modeling</a> and marine fisheries, I am now collaborating with several people on how COVID-19 might affect fisheries and fishing communities. The last time we experienced a reduction in fishing effort of this magnitude was during both world wars when oceans were effectively closed to fishing. In response to the COVID-19 pandemic, governments have shut down various parts of their economies to promote social distancing. Already, fishing seasons have been cut short or certain types of fishing (e.g. commercial versus recreational) have been restricted. However, these government actions vary between and within countries (White & Hébert-Dufresne 2020). This presents another natural experiment to see how fish populations and fisheries respond to management interventions. 
+
+
 
 Our goal is to understand the downstream effects of these shutdowns on fisheries, fish populations, and the communities that rely on them. If you are interested in contributing to this project please send an email to Easton.White@uvm.edu. We have also built a crowd-sourced database of COVID-19 related effects on fisheries. You can contribute and view the database here: <a href="https://forms.gle/iUKT9SfsHq99SVx46" target="_blank">https://forms.gle/iUKT9SfsHq99SVx46</a>.</p>
 
