Updated database link

--- a/research/index.html
+++ b/research/index.html
@@ -47,7 +47,7 @@ title: Easton R. White | Research
 
 
 
-Our goal is to understand the downstream effects of these shutdowns on fisheries, fish populations, and the communities that rely on them. If you are interested in contributing to this project please send an email to Easton.White@uvm.edu. We have also built a crowd-sourced database of COVID-19 related effects on fisheries. You can contribute and view the database here: <a href="https://forms.gle/iUKT9SfsHq99SVx46" target="_blank">https://forms.gle/iUKT9SfsHq99SVx46</a>.</p>
+Our goal is to understand the downstream effects of these shutdowns on fisheries, fish populations, and the communities that rely on them. If you are interested in contributing to this project please send an email to Easton.White@uvm.edu. We have also built a crowd-sourced database of COVID-19 related effects on fisheries which is being updated here: <a href="https://zenodo.org/record/3866189/">https://zenodo.org/record/3866189/</a>
 
 
 
