added publication links

--- a/research/index.html
+++ b/research/index.html
@@ -50,13 +50,19 @@ title: Easton R. White | Research
 Our goal is to understand the downstream effects of these shutdowns on fisheries, fish populations, and the communities that rely on them. If you are interested in contributing to this project please send an email to Easton.White@uvm.edu. We have also built a crowd-sourced database of COVID-19 related effects on fisheries which is being updated here: <a href="https://zenodo.org/record/3866189/">https://zenodo.org/record/3866189/</a>
 
 
+<h3>Relevant publications</h3>	
+ <ul>
+  <li><strong>White, Easton R.</strong>, Halley Froehlich, Jessica A. Gephart, Richard S. Cottrell, Trevor Branch, Julia Baum. <a href="https://osf.io/9bxnh/" target="_blank" rel="noopener noreferrer">Early effects of the COVID-19 pandemic on US fisheries and seafood.</a> OSF Preprints</li>
+  <li><strong>White, Easton R.</strong> and Laurent Hebert-Dufresne. <a href="https://www.medrxiv.org/content/10.1101/2020.04.14.20065318v1" target="_blank" rel="noopener noreferrer">State-level variation for initial COVID-19 dynamics in the United States.</a></li>
+</ul> 	
+	
 
 <br>
 <p><a name="MPAs"></a></p>
 <h2>Marine protected areas in a changing world</h2>
 <p>We are examining the design of marine protected areas given environmental variability. All over the world, networks of marine protected areas have been established as both a conservation and management tool (Gaines et al. 2010). However, most work to date has ignored the role that variability or uncertainty in designing these marine protected areas (but see Halpern et al. 2006). Variability is important as individual protected areas can serve as an insurance policy for one another. If a population in a particular protected area is devastated by a hurricane, then organisms from another, unaffected population can recolonize that protected area. My current work (available as a preprint below) has focused on building simple, theoretical models to include variability in the design of these protected areas.</p>
 
-<p><strong>White, Easton R., </strong>Marissa L. Baskett, and Alan Hastings. 2019. <a href="https://www.biorxiv.org/content/10.1101/750448v1">Catastrophes, connectivity, and Allee effects in the design of marine reserve networks</a>. bioRxiv.</p>
+<p><strong>White, Easton R., </strong>Marissa L. Baskett, and Alan Hastings. 2019. <a href="https://www.biorxiv.org/content/10.1101/750448v1" target="_blank" rel="noopener noreferrer">Catastrophes, connectivity, and Allee effects in the design of marine reserve networks</a>. bioRxiv.</p>
 
 
 
@@ -100,6 +106,12 @@ Our goal is to develop tools to make better decisions in highly variable Malagas
 
 <p><a href="https://www.uvm.edu/rsenr/profiles/rosalie-bruel" target="_blank" rel="noopener noreferrer">Dr. Rosalie Bruel</a> and I applied these techniques to study the optimal sampling requirements and approaches for detecting ecosystem change in plankton communities derived from sediment cores. This work is now available in a <a href="https://www.biorxiv.org/content/10.1101/2020.04.07.030643v1" target="_blank" rel="noopener noreferrer">recent preprint</a>.
 
+
+<h3>Relevant publications</h3>	
+ <ul>
+  <li>Bruel, Rosalie &<strong>White, Easton R.</strong> <a href="https://www.biorxiv.org/content/10.1101/2020.04.07.030643v1" target="_blank" rel="noopener noreferrer">Sampling requirements and approaches to detect ecosystem shifts.</a>bioRxiv.</li>
+  <li><strong>White, Easton R.</strong> and Christie Bahlai. <a href="https://ecoevorxiv.org/cz5va/" target="_blank" rel="noopener noreferrer">Experimenting with the past to improve environmental monitoring programs.</a> EcoEvoRxiv preprints</li>
+</ul> 	
 	
 	
 <br>
