updated intro of teaching

--- a/teaching/index.html
+++ b/teaching/index.html
@@ -5,20 +5,20 @@ title: Easton R. White | Teaching
 
 <h2>TEACHING</h2>
 
-<p>I view teaching as a highly scientific enterprise. I form hypotheses about teaching, conduct experiments in the classroom to test these hypotheses, examine the results, and adjust my teaching approach accordingly. In my teaching, I use a mix of active learning techniques (e.g. flipped classes, think-pair-share, Jigsaws) in line with evidence-based pedagogy. I believe it is important for students to work on important, real-life case studies throughout the curriculum. You can read more about my research into teaching in the <a href="https://eastonwhite.wordpress.com/current-research/#SoTL">Scholarship of Teaching and Learning section of my research page. </a> </p>
+<p>I view teaching as a highly scientific enterprise. I read literature on pedagogy and form hypotheses about teaching, conduct experiments in the classroom to test these hypotheses, examine the results, and adjust my teaching approach accordingly. In my teaching, I use a mix of active learning techniques (e.g. flipped classes, think-pair-share, Jigsaws) in line with evidence-based pedagogy. I believe it is important for students to work on important, real-life case studies throughout the curriculum. In each of my courses, I teach more than only the specific course content. I also teach transferable skills, connections to other disciplines, and the interaction between science and culture, especially related to systemic racism and sexism. You can read more about my research into teaching in the <a href="https://eastonwhite.github.io/research/#SoTL">Scholarship of Teaching and Learning section of my research page. </a>   </p>
 
 <img src="/images/easton_teaching.png" alt="learning_glass" align="right" style="height:200px;">
 
 
-<p>I am currently the instructor for Foundations of Quantitative Reasoning, a PhD course at the University of Vermont. The class is a mix of ecology, evolution, quantitative skills, and programming in R. All the materials for the course are freely available at: <a href="https://eastonwhite.github.io/QuantReasoning/" rel="nofollow">https://eastonwhite.github.io/QuantReasoning/</a></p>
+<p>I developed and now instruct Foundations of Quantitative Reasoning, a graduate course at the University of Vermont. The class is a mix of ecology, evolution, quantitative skills, and programming in R. All the materials for the course are freely available at: <a href="https://eastonwhite.github.io/QuantReasoning/" rel="nofollow">https://eastonwhite.github.io/QuantReasoning/</a></p>
 <p>I am also an instructor for the group <a href="http://software-carpentry.org/" target="_blank" rel="noopener">Software Carpentry</a>. I teach 2-3 workshops a year designed to help scientists be more productive using various software skills including Git/version control, R statistical software, and command line.</p>
-<p>I have extensive training in pedagogy including a year as a fellow in the <a href="https://grad.ucdavis.edu/professional-development/professors-future" target="_blank" rel="noopener">Professors for the Future</a> program.      </strong></p>
+<p>I have extensive training in pedagogy including a year as a fellow in the <a href="https://grad.ucdavis.edu/professional-development/professors-future" target="_blank" rel="noopener">Professors for the Future</a> program.      </strong></p> 
 
 
 <hr size="2" width="100%" align="left">
 
 <p><strong><em>University of California, Davis</em></strong></p>
-<p style="margin-left: 20px"><strong>Instructor</strong>, BIS2B Ecology and Evolution Bootcamp, Biology Undergraduate Scholars Program, Summer 2017 and 2018, Davis, CA </p>
+<p style="margin-left: 20px"><strong>Instructor</strong>, Introductory Biology: Ecology and Evolution (BIS2B), Biology Undergraduate Scholars Program, Summer 2017 and 2018, Davis, CA </p>
 <ul padding-left: 15px>
 <li>Designed the curriculum, created assignments and exams, led group activities, and taught lectures</li>
 <li>The course emphasized teaching quantitative skills as part of the first-year biology curriculum</li>
