updated intro paragraph

--- a/research/index.html
+++ b/research/index.html
@@ -18,7 +18,15 @@ title: Easton R. White | Research
 
 <img src="/images/research_venn.png" alt="research_venn" align="top" style="height:300px;">
 
-<p>I use a variety of quantitative approaches, combined with experiments and field observations, to address questions in ecology and conservation science. Most of this work falls within regions of the venn diagram above. I have current projects focused on socio-ecological systems, environmental variabilty and population dynamics, improving monitoring programs, and designing marine reserve networks. In addition to biology-focused work, I have also conducted <a href="#SoTL">research on pedagogy</a>.</p>
+<p>Environmental variability can occur on daily to decadal time scales. This variability can include natural variation, such as changes in seasons, or anthropogenic events like oil spills. Of course, these various forms of environmental variability shape ecosystems, and, consequently, the human communities that depend on them. In addition, climate change is expected to increase variability and uncertainty of these environmental factors. My research program addresses questions that fall within the Venn diagram above: 
+<ol>
+1. <li>How does environmental variability, particularly rare events like heatwaves or algal blooms, affect the ecology and population dynamics of various species?</li>
+2. <li>How can we improve population monitoring programs given uncertainty?</li>
+3. <li>How can incorporating uncertainty in models help us make better decisions about fisheries and the conservation of endangered species? </li>
+4. <li>How are natural-human systems affected by environmental variability and how can we ensure they are robust to shocks, like the current COVID-19 pandemic?</li>
+</ol>
+	
+I address these questions using a variety of mathematical and statistical tools as well as long-term field studies. I have current projects focused on socio-ecological systems, environmental variabilty and population dynamics, improving monitoring programs, and designing marine reserve networks. In addition to biology-focused work, I have also conducted <a href="#SoTL">research on pedagogy</a>.</p>
 
 
 <br>
