added covid preprints

--- a/research/index.html
+++ b/research/index.html
@@ -20,10 +20,10 @@ title: Easton R. White | Research
 
 <p>Environmental variability can occur on daily to decadal time scales. This variability can include natural variation, such as changes in seasons, or anthropogenic events like oil spills. Of course, these various forms of environmental variability shape ecosystems, and, consequently, the human communities that depend on them. In addition, climate change is expected to increase variability and uncertainty of these environmental factors. My research program addresses questions that fall within the Venn diagram above: 
 <ol>
-1. <li>How does environmental variability, particularly rare events like heatwaves or algal blooms, affect the ecology and population dynamics of various species?</li>
-2. <li>How can we improve population monitoring programs given uncertainty?</li>
-3. <li>How can incorporating uncertainty in models help us make better decisions about fisheries and the conservation of endangered species? </li>
-4. <li>How are natural-human systems affected by environmental variability and how can we ensure they are robust to shocks, like the current COVID-19 pandemic?</li>
+<li>How does environmental variability, particularly rare events like heatwaves or algal blooms, affect the ecology and population dynamics of various species?</li>
+<li>How can we improve population monitoring programs given uncertainty?</li>
+<li>How can incorporating uncertainty in models help us make better decisions about fisheries and the conservation of endangered species? </li>
+<li>How are natural-human systems affected by environmental variability and how can we ensure they are robust to shocks, like the current COVID-19 pandemic?</li>
 </ol>
 	
 I address these questions using a variety of mathematical and statistical tools as well as long-term field studies. I have current projects focused on socio-ecological systems, environmental variabilty and population dynamics, improving monitoring programs, and designing marine reserve networks. In addition to biology-focused work, I have also conducted <a href="#SoTL">research on pedagogy</a>.</p>
@@ -61,7 +61,14 @@ Our goal is to understand the downstream effects of these shutdowns on fisheries
 <h3>Relevant publications</h3>	
  <ul>
   <li><strong>White, Easton R.</strong>, Halley Froehlich, Jessica A. Gephart, Richard S. Cottrell, Trevor Branch, Julia Baum. <a href="https://osf.io/9bxnh/" target="_blank" rel="noopener noreferrer">Early effects of the COVID-19 pandemic on US fisheries and seafood.</a> OSF Preprints</li>
+  <li> 	Froehlich Halley E., Rebecca Gentry, Sarah E. Lester, Richard S. Cottrell, Gavin Fay, Trevor A. Branch, Jessica A. Gephart, <strong>Easton R. White</strong>, and Julia K. Baum <a href="https://osf.io/vcn2d/" target="_blank" rel="noopener noreferrer">Securing a sustainable future for US seafood in the wake of a global crisis.</a> OSF Preprints</li>
+  <li>Ward-Paige, Christine A.,  <strong>White, Easton R.</strong>, Elizabeth M.P. Madin, and 25 others. <a href="https://osf.io/sxnu5/" target="_blank" rel="noopener noreferrer">A framework for mapping and monitoring human-ocean interactions in near real-time during COVID-19 and beyond.</a> OSF Preprints</li>	
+</ul> 	
+	
+<h3>COVID-specific publications</h3>	
+ <ul>
   <li><strong>White, Easton R.</strong> and Laurent Hebert-Dufresne. <a href="https://www.medrxiv.org/content/10.1101/2020.04.14.20065318v1" target="_blank" rel="noopener noreferrer">State-level variation for initial COVID-19 dynamics in the United States.</a></li>
+  <li>Benjamin M. Althouse, Brendan Wallace, Brendan Case, Samuel V. Scarpino, Andrew M. Berdahl, <strong>White, Easton R.</strong> and Laurent Hebert-Dufresne.  medRxiv. <a href="https://www.medrxiv.org/content/10.1101/2020.08.21.20179473v1" target="_blank" rel="noopener noreferrer">The unintended consequences of inconsistent pandemic control policies.</a></li>
 </ul> 	
 	
 
@@ -70,7 +77,7 @@ Our goal is to understand the downstream effects of these shutdowns on fisheries
 <h2>Marine protected areas in a changing world</h2>
 <p>We are examining the design of marine protected areas given environmental variability. All over the world, networks of marine protected areas have been established as both a conservation and management tool (Gaines et al. 2010). However, most work to date has ignored the role that variability or uncertainty in designing these marine protected areas (but see Halpern et al. 2006). Variability is important as individual protected areas can serve as an insurance policy for one another. If a population in a particular protected area is devastated by a hurricane, then organisms from another, unaffected population can recolonize that protected area. My current work (available as a preprint below) has focused on building simple, theoretical models to include variability in the design of these protected areas.</p>
 
-<p><strong>White, Easton R., </strong>Marissa L. Baskett, and Alan Hastings. 2019. <a href="https://www.biorxiv.org/content/10.1101/750448v1" target="_blank" rel="noopener noreferrer">Catastrophes, connectivity, and Allee effects in the design of marine reserve networks</a>. bioRxiv.</p>
+<p><strong>White, Easton R., </strong>Marissa L. Baskett, and Alan Hastings. 2020. <a href="https://www.biorxiv.org/content/10.1101/750448v1" target="_blank" rel="noopener noreferrer">Catastrophes, connectivity, and Allee effects in the design of marine reserve networks</a>. bioRxiv.</p>
 
 
 
