--- a/research/index.html
+++ b/research/index.html
@@ -124,8 +124,11 @@ Our goal is to develop tools to make better decisions in highly variable Malagas
 
 <h3>Relevant publications</h3>	
  <ul>
-  <li>Bruel, Rosalie &<strong>White, Easton R.</strong> <a href="https://www.biorxiv.org/content/10.1101/2020.04.07.030643v1" target="_blank" rel="noopener noreferrer">Sampling requirements and approaches to detect ecosystem shifts.</a>bioRxiv.</li>
-  <li><strong>White, Easton R.</strong> and Christie Bahlai. <a href="https://ecoevorxiv.org/cz5va/" target="_blank" rel="noopener noreferrer">Experimenting with the past to improve environmental monitoring programs.</a> EcoEvoRxiv preprints</li>
+  <li> Fournier, Auriel, <strong>Easton R. White</strong>, and Stephen Heard. 2019. <a href="https://eastonwhite.github.io/publications/2019_Fournier_etal_ConBio.pdf" target="_blank" rel="noopener noreferrer">Site-selection bias can drive apparent population declines in long-term studies. </a> Conservation Biology.</li>
+  <li><strong> Easton R. White</strong> 2019. <a href="https://eastonwhite.github.io/publications/2019_White_Bioscience.pdf" target="_blank" rel="noopener noreferrer">Minimum time required to detect population trends: the need for long-term monitoring programs. </a> BioScience. Editors’ Choice article.</li>
+  <li>Bruel, Rosalie &<strong> Easton R. White</strong> <a href="https://www.biorxiv.org/content/10.1101/2020.04.07.030643v1" target="_blank" rel="noopener noreferrer">Sampling requirements and approaches to detect ecosystem shifts.</a> bioRxiv preprints.</li>
+  <li><strong>White, Easton R.</strong> and Christie Bahlai. <a href="https://ecoevorxiv.org/cz5va/" target="_blank" rel="noopener noreferrer">Experimenting with the past to improve environmental monitoring programs.</a> EcoEvoRxiv preprints.</li>
+  <li>Christie A. Bahlai, <strong>Easton R. White</strong>, Julia D. Perrone, Sarah Cusser, and Kaitlin Stack Whitney. <a href="https://www.biorxiv.org/content/10.1101/2020.07.07.192211v1" target="_blank" rel="noopener noreferrer">An algorithm for quantifying and characterizing misleading trajectories in ecological processes.</a> bioRxiv preprints.</li>
 </ul> 	
 	
 	
