--- a/research/index.html
+++ b/research/index.html
@@ -62,13 +62,13 @@ Our goal is to understand the downstream effects of these shutdowns on fisheries
  <ul>
   <li><strong>White, Easton R.</strong>, Halley Froehlich, Jessica A. Gephart, Richard S. Cottrell, Trevor Branch, Julia Baum. <a href="https://osf.io/9bxnh/" target="_blank" rel="noopener noreferrer">Early effects of the COVID-19 pandemic on US fisheries and seafood.</a> OSF Preprints</li>
   <li> 	Froehlich Halley E., Rebecca Gentry, Sarah E. Lester, Richard S. Cottrell, Gavin Fay, Trevor A. Branch, Jessica A. Gephart, <strong>Easton R. White</strong>, and Julia K. Baum <a href="https://osf.io/vcn2d/" target="_blank" rel="noopener noreferrer">Securing a sustainable future for US seafood in the wake of a global crisis.</a> OSF Preprints</li>
-  <li>Ward-Paige, Christine A.,  <strong>White, Easton R.</strong>, Elizabeth M.P. Madin, and 25 others. <a href="https://osf.io/sxnu5/" target="_blank" rel="noopener noreferrer">A framework for mapping and monitoring human-ocean interactions in near real-time during COVID-19 and beyond.</a> OSF Preprints</li>	
+  <li>Ward-Paige, Christine A.,  <strong>Easton R. White</strong>, Elizabeth M.P. Madin, and 25 others. <a href="https://osf.io/sxnu5/" target="_blank" rel="noopener noreferrer">A framework for mapping and monitoring human-ocean interactions in near real-time during COVID-19 and beyond.</a> OSF Preprints</li>	
 </ul> 	
 	
 <h3>COVID-specific publications</h3>	
  <ul>
   <li><strong>White, Easton R.</strong> and Laurent Hebert-Dufresne. <a href="https://www.medrxiv.org/content/10.1101/2020.04.14.20065318v1" target="_blank" rel="noopener noreferrer">State-level variation for initial COVID-19 dynamics in the United States.</a></li>
-  <li>Benjamin M. Althouse, Brendan Wallace, Brendan Case, Samuel V. Scarpino, Andrew M. Berdahl, <strong>White, Easton R.</strong> and Laurent Hebert-Dufresne.  medRxiv. <a href="https://www.medrxiv.org/content/10.1101/2020.08.21.20179473v1" target="_blank" rel="noopener noreferrer">The unintended consequences of inconsistent pandemic control policies.</a></li>
+  <li>Benjamin M. Althouse, Brendan Wallace, Brendan Case, Samuel V. Scarpino, Andrew M. Berdahl, <strong>Easton R. White</strong> and Laurent Hebert-Dufresne.  medRxiv. <a href="https://www.medrxiv.org/content/10.1101/2020.08.21.20179473v1" target="_blank" rel="noopener noreferrer">The unintended consequences of inconsistent pandemic control policies.</a></li>
 </ul> 	
 	
 
@@ -125,7 +125,7 @@ Our goal is to develop tools to make better decisions in highly variable Malagas
 <h3>Relevant publications</h3>	
  <ul>
   <li> Fournier, Auriel, <strong>Easton R. White</strong>, and Stephen Heard. 2019. <a href="https://eastonwhite.github.io/publications/2019_Fournier_etal_ConBio.pdf" target="_blank" rel="noopener noreferrer">Site-selection bias can drive apparent population declines in long-term studies. </a> Conservation Biology.</li>
-  <li><strong> Easton R. White</strong> 2019. <a href="https://eastonwhite.github.io/publications/2019_White_Bioscience.pdf" target="_blank" rel="noopener noreferrer">Minimum time required to detect population trends: the need for long-term monitoring programs. </a> BioScience. Editors’ Choice article.</li>
+  <li><strong> Easton R. White.</strong> 2019. <a href="https://eastonwhite.github.io/publications/2019_White_Bioscience.pdf" target="_blank" rel="noopener noreferrer">Minimum time required to detect population trends: the need for long-term monitoring programs. </a> BioScience. Editors’ Choice article.</li>
   <li>Bruel, Rosalie &<strong> Easton R. White</strong> <a href="https://www.biorxiv.org/content/10.1101/2020.04.07.030643v1" target="_blank" rel="noopener noreferrer">Sampling requirements and approaches to detect ecosystem shifts.</a> bioRxiv preprints.</li>
   <li><strong>White, Easton R.</strong> and Christie Bahlai. <a href="https://ecoevorxiv.org/cz5va/" target="_blank" rel="noopener noreferrer">Experimenting with the past to improve environmental monitoring programs.</a> EcoEvoRxiv preprints.</li>
   <li>Christie A. Bahlai, <strong>Easton R. White</strong>, Julia D. Perrone, Sarah Cusser, and Kaitlin Stack Whitney. <a href="https://www.biorxiv.org/content/10.1101/2020.07.07.192211v1" target="_blank" rel="noopener noreferrer">An algorithm for quantifying and characterizing misleading trajectories in ecological processes.</a> bioRxiv preprints.</li>
