--- a/join/index.html
+++ b/join/index.html
@@ -14,7 +14,8 @@ title: Easton R. White | Join the Lab
 
  <ul>
    <li><a href="http://go.uvm.edu/nia9k">Gund postdoctoral fellow program (based at the University of Vermont)</a> - due Nov 11</li>
-   <li><a href="http://go.uvm.edu/nia9k">NSF Ocean Sciences postdoctoral fellow program (based anywhere) - due </a></li>
+   <li><a href="http://go.uvm.edu/nia9k">NSF Ocean Sciences postdoctoral fellow program (based anywhere) </a></li>
+   <li><a href="https://us.fulbrightonline.org/">Fulbright program</a> - this is for non-US residents to study and work in the US</li>
 </ul> 
 
 
