added COVID news

--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@ I am a quantitative ecologist who uses mathematical and statistical tools, coupl
 You can learn more about my work on species monitoring in a recent <a href="http://bioscience-talks.aibs.org/saving-species-with-better-monitoring">interview with the journal <i>BioScience</i>.</a>
 
 <br /> 
+
+Our recent work related to the <a href="https://eastonwhite.github.io/publications/2020_White_etal_FishFisheries.pdf">COVID-19 pandemic's effects on US fisheries and seafood</a> has been shared by over 200 news outlets including:
+ <ul>
+  <li><a href="https://apnews.com/article/coronavirus-global-seafood-trade-maine-9f61277ba1ba3e01a062b341df6f90f2" target="_blank">Associated Press</a></li>
+  <li><a href="https://www.seafoodsource.com/news/supply-trade/study-provides-first-comprehensive-look-at-covid-s-impact-on-us-seafood-industry" target="_blank">Seafood Source</a></li>
+  <li><a href="https://www.newfoodmagazine.com/news/127834/us-seafood-industry/" target="_blank">New Food Magazine</a></li>
+</ul> 
+
+
+<br /> 
 <br /> 
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
