--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@ You can learn more about my work on species monitoring in a recent <a href="http
 <br> 
 <br> 
 
-Our recent work related to the <a href="https://eastonwhite.github.io/publications/2020_White_etal_FishFisheries.pdf">COVID-19 pandemic's effects on US fisheries and seafood</a> has been shared by over 200 news outlets including:
+Our recent work related to the <a href="https://eastonwhite.github.io/publications/2020_White_etal_FishFisheries.pdf">COVID-19 pandemic's effects on US fisheries and seafood</a> has been shared by over 200 news outlets, including:
  <ul>
-  <li><a href="https://apnews.com/article/coronavirus-global-seafood-trade-maine-9f61277ba1ba3e01a062b341df6f90f2" target="_blank">Pandemic has taken a bite out of seafood trade, consumption</a>(Associated Press)</li>
+  <li><a href="https://apnews.com/article/coronavirus-global-seafood-trade-maine-9f61277ba1ba3e01a062b341df6f90f2" target="_blank">Pandemic has taken a bite out of seafood trade, consumption</a> (Associated Press)</li>
   <li><a href="https://www.seafoodsource.com/news/supply-trade/study-provides-first-comprehensive-look-at-covid-s-impact-on-us-seafood-industry" target="_blank">Study provides first comprehensive look at COVID’s impact on US seafood industry</a> (Seafood Source)</li>
-  li><a href="https://www.ijpr.org/show/the-jefferson-exchange/2020-12-08/wed-8-30-seafood-industry-takes-a-big-hit-from-pandemic" target="_blank">Radio interview: Seafood Industry Takes A Big Hit From Pandemic  </a>(NPR affiliate Jefforson Public Radio)</li>
-  <li><a href="https://www.newfoodmagazine.com/news/127834/us-seafood-industry/" target="_blank">US Seafood industry needs federal help to bounce back </a>(New Food Magazine)</li>
+  <li><a href="https://www.ijpr.org/show/the-jefferson-exchange/2020-12-08/wed-8-30-seafood-industry-takes-a-big-hit-from-pandemic" target="_blank">Radio interview: Seafood Industry Takes A Big Hit From Pandemic</a> (NPR affiliate Jefferson Public Radio)</li>
+  <li><a href="https://www.newfoodmagazine.com/news/127834/us-seafood-industry/" target="_blank">US Seafood industry needs federal help to bounce back</a> (New Food Magazine)</li>
 </ul> 
 
 
