--- a/teaching/index.html
+++ b/teaching/index.html
@@ -5,6 +5,10 @@ title: Easton R. White | Teaching
 
 <h2>TEACHING</h2>
 
+<p><h3><a href="https://eastonwhite.github.io/cv/EastonWhite_Teaching_Statement.pdf" target="_blank" rel="noopener noreferrer">Teaching Statement</a></h3></p>
+
+<p><h3><a href="https://eastonwhite.github.io/cv/EastonWhite_Diversity_Statement.pdf" target="_blank" rel="noopener noreferrer">Diversity Statement</a></h3></p>
+
 <p>I view teaching as a highly scientific enterprise. I read literature on pedagogy and form hypotheses about teaching, conduct experiments in the classroom to test these hypotheses, examine the results, and adjust my teaching approach accordingly. In my teaching, I use a mix of active learning techniques (e.g. flipped classes, think-pair-share, Jigsaws) in line with evidence-based pedagogy. I believe it is important for students to work on important, real-life case studies throughout the curriculum. In each of my courses, I teach more than only the specific course content. I also teach transferable skills, connections to other disciplines, and the interaction between science and culture, especially related to systemic racism and sexism. You can read more about my research into teaching in the <a href="https://eastonwhite.github.io/research/#SoTL">Scholarship of Teaching and Learning section of my research page. </a>   </p>
 
 <img src="/images/easton_teaching.png" alt="learning_glass" align="right" style="height:200px;">
@@ -16,6 +20,13 @@ title: Easton R. White | Teaching
 
 
 <hr size="2" width="100%" align="left">
+
+<p><strong><em>University of Vermont</em></strong></p>
+<p style="margin-left: 20px"><strong>Instructor</strong>, Foundations of Quantitative Reasoning (BIO381), Spring 2019 - Present</p>
+<ul padding-left: 15px>
+<li>I designed this new core course for the Quantitative and Evolutionary STEM Training (QuEST) program. The course focuses on quantitative tools for ecologists and evolutionary biologists. The course emphasizes team-based learning, case studies, and flipped classrooms lessons.</li>
+<li>All the material is open source: <a href="https://eastonwhite.github.io/QuantReasoning/" target="_blank" rel="noopener">https://eastonwhite.github.io/QuantReasoning/ </a></li>
+</ul> 
 
 <p><strong><em>University of California, Davis</em></strong></p>
 <p style="margin-left: 20px"><strong>Instructor</strong>, Introductory Biology: Ecology and Evolution (BIS2B), Biology Undergraduate Scholars Program, Summer 2017 and 2018, Davis, CA </p>
