--- a/join/index.html
+++ b/join/index.html
@@ -13,8 +13,8 @@ title: Easton R. White | Join the Lab
 <p>I may have funds for a postdoctoral fellow to work on questions related to fisheries and disturbances in the next 1-2 years. In the meantime, I am open to collaboratively working on proposals to help fund independent postdoctoral fellow positions through several different programs. Possible projects include: modeling disturbances and socio-environmental systems, improving population monitoring and data collection, infectious diseases in a socio-environmental context, and synthesizing across socio-environmental fisheries. My background is in quantitative ecology with an emphasis on marine systems. However, my interests are broad and I am happy to discuss other project ideas further.</p>
 
  <ul>
-   <li><a href="http://go.uvm.edu/nia9k">Gund postdoctoral fellow program (based at the University of Vermont)</a> - due Nov 11</li>
-   <li><a href="http://go.uvm.edu/nia9k">NSF Ocean Sciences postdoctoral fellow program (based anywhere) </a></li>
+   <li><a href="http://go.uvm.edu/nia9k">Gund postdoctoral fellow program (based at the University of Vermont)</a> - due Nov 11th</li>
+   <li><a href="https://www.nsf.gov/pubs/2021/nsf21538/nsf21538.htm">NSF Ocean Sciences postdoctoral fellow program (based anywhere) - Due Mar 3rd </a></li>
    <li><a href="https://us.fulbrightonline.org/">Fulbright program</a> - this is for non-US residents to study and work in the US</li>
 </ul> 
 
