fixed html list

--- a/join/index.html
+++ b/join/index.html
@@ -14,7 +14,7 @@ title: Easton R. White | Join the Lab
 
  <ul>
    <li><a href="http://go.uvm.edu/nia9k">Gund postdoctoral fellow program (based at the University of Vermont)</a> - due Nov 11th</li>
-   <li><a href="https://www.nsf.gov/pubs/2021/nsf21538/nsf21538.htm">NSF Ocean Sciences postdoctoral fellow program (based anywhere) - Due Mar 3rd </a></li>
+   <li><a href="https://www.nsf.gov/pubs/2021/nsf21538/nsf21538.htm">NSF Ocean Sciences postdoctoral fellow program (based anywhere)</a> - Due Mar 3rd </li>
    <li><a href="https://us.fulbrightonline.org/">Fulbright program</a> - this is for non-US residents to study and work in the US</li>
 </ul> 
 
