added postdoc fellowships

--- a/join/index.html
+++ b/join/index.html
@@ -5,8 +5,8 @@ title: Easton R. White | Join the Lab
 
 <h2>JOIN THE LAB</h2>
 
-<h3><i>Masters students</i></h3>
-<p>I am currently looking to recruit a masters student to work on socio-ecological questions in small-scale tropical fisheries. Experience (and willingness to learn more) with R, quantitative skills, and field work is needed. If you are interested, please send (<a href="mailto:Easton.White@uvm.edu">Easton.White@uvm.edu</a>) a CV and brief introduction, including details of your prior research experience, as well as your research interests and graduate school goals and how you think these align with my research program.</p>
+<h3><i>Graduate students</i></h3>
+<p>I am currently looking to recruit a graduate student (MS or PhD) to work on socio-ecological questions in small-scale tropical fisheries. Experience (and willingness to learn more) with R, quantitative skills, and field work is needed. If you are interested, please send (<a href="mailto:Easton.White@uvm.edu">Easton.White@uvm.edu</a>) a CV and brief introduction, including details of your prior research experience, as well as your research interests and graduate school goals and how you think these align with my research program.</p>
 
 
 <h3><i>Postdoctoral fellows</i></h3>
@@ -15,7 +15,10 @@ title: Easton R. White | Join the Lab
  <ul>
    <li><a href="http://go.uvm.edu/nia9k">Gund postdoctoral fellow program (based at the University of Vermont)</a> - due Nov 11th</li>
    <li><a href="https://www.nsf.gov/pubs/2021/nsf21538/nsf21538.htm">NSF Ocean Sciences postdoctoral fellow program (based anywhere)</a> - Due Mar 3rd </li>
-   <li><a href="https://us.fulbrightonline.org/">Fulbright program</a> - this is for non-US residents to study and work in the US</li>
+   <li><a href="https://us.fulbrightonline.org/">Fulbright program</a> - this is for non-US residents to study and work in the US - due in October each year</li>
+   <li><a href="https://www.hfsp.org/funding/hfsp-funding/postdoctoral-fellowships">Human Frontier Science Program postdoctoral fellowship</a> - intended for interdisiplinary scholars working in the life sciences - due August of each year</li>
+   <li><a href="https://schmidtsciencefellows.org/selection/">Schmidt Science Fellows postdoctoral program</a> </li>
+   <li><a href="https://conbio.org/mini-sites/smith-fellows">Smith Fellowship program</a> - Conservation-focused award due in October each year</li>
 </ul> 
 
 
