recruitment details added

--- a/join/index.html
+++ b/join/index.html
@@ -5,12 +5,22 @@ title: Easton R. White | Join the Lab
 
 <h2>JOIN THE LAB</h2>
 
+<p>There are openings for graduate students and postdoctoral fellows within the Quantitative Marine Ecology Lab at the University of New Hampshire working with Professor Easton White.</p>
+
+All lab members must be:
+ <ul>
+<li> Decent human beings (we don’t work with jerks) </li>
+<li> Interested in marine systems and using quantitative tools (e.g., mathematical models, statistics, R) </li>
+<li> Wanting to change the world </li>
+  </ul> 
+
+
 <h3><i>Graduate students</i></h3>
-<p>I am currently looking to recruit a graduate student (MS or PhD) to work on socio-ecological questions in small-scale tropical fisheries. Experience (and willingness to learn more) with R, quantitative skills, and field work is needed. If you are interested, please send (<a href="mailto:Easton.White@uvm.edu">Easton.White@uvm.edu</a>) a CV and brief introduction, including details of your prior research experience, as well as your research interests and graduate school goals and how you think these align with my research program.</p>
+<p> I am currently looking to recruit graduate students to work on socio-ecological questions in small-scale tropical fisheries and species monitoring. Experience (and willingness to learn more) with R, quantitative skills (e.g., mathematical modeling, statistics), and field work is needed. A basic understanding of French is also a plus. If you are interested, please send (<a href="mailto:Easton.White@unh.edu">Easton.White@unh.edu</a>) a CV and brief introduction, including details of your prior research experience, as well as your research interests and graduate school goals and how you think these align with my research program. I am also open to chatting about potential projects related to other areas of my research program.</p>
 
 
 <h3><i>Postdoctoral fellows</i></h3>
-<p>I may have funds for a postdoctoral fellow to work on questions related to fisheries and disturbances in the next 1-2 years. In the meantime, I am open to collaboratively working on proposals to help fund independent postdoctoral fellow positions through several different programs. Possible projects include: modeling disturbances and socio-environmental systems, improving population monitoring and data collection, infectious diseases in a socio-environmental context, and synthesizing across socio-environmental fisheries. My background is in quantitative ecology with an emphasis on marine systems. However, my interests are broad and I am happy to discuss other project ideas further.</p>
+<p>I am looking for postdoctoral fellows to work on questions related to fisheries and disturbances, mathematical modeling of disturbances and socio-environmental systems, improving population monitoring and data collection, sustainable seafood, or synthesizing across socio-environmental fisheries. My background is in quantitative ecology with an emphasis on marine systems. However, my interests are broad and I am happy to discuss other project ideas further. I am also open to collaboratively working on proposals to help fund independent postdoctoral fellow positions through several different programs. </p>
 
  <ul>
    <li><a href="http://go.uvm.edu/nia9k">Gund postdoctoral fellow program (based at the University of Vermont)</a> - due Nov 11th</li>
