--- a/join/index.html
+++ b/join/index.html
@@ -32,4 +32,4 @@ All lab members must be:
 </ul> 
 
 
-<p>If you are interested, please send an email and CV to Easton White (<a href="mailto:Easton.White@uvm.edu">Easton.White@uvm.edu</a>). </p>
+<p>If you are interested, please send an email and CV to Easton White (<a href="mailto:Easton.White@unnh.edu">Easton.White@unh.edu</a>). </p>
