--- a/join/index.html
+++ b/join/index.html
@@ -33,3 +33,14 @@ All lab members must be:
 
 
 <p>If you are interested, please send an email and CV to Easton White (<a href="mailto:Easton.White@unnh.edu">Easton.White@unh.edu</a>). </p>
+
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-130886793-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-130886793-2');
+</script>
