--- a/join/index.html
+++ b/join/index.html
@@ -14,6 +14,7 @@ All lab members must be:
 <li> Wanting to change the world </li>
   </ul> 
 
+<p>Members of the lab are strongly committed to anti-racist practices, real diversity and inclusion efforts, and moving science beyond the ivory tower.</p>
 
 <h3><i>Graduate students</i></h3>
 <p> I am currently looking to recruit graduate students (to start Fall 2021 or 2022) to work on socio-ecological questions in small-scale tropical fisheries and species monitoring. Experience (and willingness to learn more) with R, quantitative skills (e.g., mathematical modeling, statistics), and field work is needed. A basic understanding of French is also a plus. If you are interested, please send (<a href="mailto:Easton.White@unh.edu">Easton.White@unh.edu</a>) a CV and brief introduction, including details of your prior research experience, as well as your research interests and graduate school goals and how you think these align with my research program. I am also open to chatting about potential projects related to other areas of my research program. For a start date of Fall 2021, I will give priority to applicants who have contacted me before March 1st. </p>
