Added line about diversity and equity

--- a/join/index.html
+++ b/join/index.html
@@ -38,6 +38,11 @@ All lab members must be:
 <p>If you are interested, please send an email and CV to Easton White (<a href="mailto:Easton.White@unnh.edu">Easton.White@unh.edu</a>). </p>
 
 
+
+
+<p>One of my main commitments as a faculty member is promoting and supporting diversity, equity, and inclusion in STEM. Please consider applying for a position in my lab if you are a first-generation college student, a student from a low-income background, a member of a racial or ethnic minority group, if you identify as a woman or as LGBTQ+, and/or if you have a disability.</p>
+
+
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-130886793-2"></script>
 <script>
