added news coverage

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ Our recent work related to the <a href="https://eastonwhite.github.io/publicatio
   <li><a href="https://www.seafoodsource.com/news/supply-trade/study-provides-first-comprehensive-look-at-covid-s-impact-on-us-seafood-industry" target="_blank">Study provides first comprehensive look at COVID’s impact on US seafood industry</a> (Seafood Source)</li>
   <li><a href="https://www.ijpr.org/show/the-jefferson-exchange/2020-12-08/wed-8-30-seafood-industry-takes-a-big-hit-from-pandemic" target="_blank">Radio interview: Seafood Industry Takes A Big Hit From Pandemic</a> (NPR affiliate Jefferson Public Radio)</li>
   <li><a href="https://www.newfoodmagazine.com/news/127834/us-seafood-industry/" target="_blank">US Seafood industry needs federal help to bounce back</a> (New Food Magazine)</li>
+  <li><a href="https://thecounter.org/pandemic-us-fisheries-covid-19-seafood-csf/https://thecounter.org/pandemic-us-fisheries-covid-19-seafood-csf/" target="_blank">The pandemic could change U.S. fisheries forever. Will it be for better or for worse?</a> (The Counter)</li>
 </ul> 
 
 
