--- a/resources/index.html
+++ b/resources/index.html
@@ -6,6 +6,7 @@ title: Easton R. White | Resources
 
 <p>People or institutions I have or currently work with</p>
 <ul>
+  <li><a href="https://alanhastings.ucdavis.edu/">Hastings Lab</a></li>
 <li><a href="http://cpb.ucdavis.edu/">UC Davis Population Biology</a></li>
 <li><a href="https://www.uvm.edu/quest">QuEST grad program </a>at University of Vermont</li>
 <li><a href="http://baumlab.weebly.com/">Baum Lab</a></li>
