added ECR database

--- a/resources/index.html
+++ b/resources/index.html
@@ -36,6 +36,7 @@ title: Easton R. White | Resources
 
 <p>Fellowships/scholarships</p>
 <ul>
+<li><a href="https://ecrcentral.org/">Early Career Researcher fellowship and grant database</a></li>
 <li><a href="https://www.youtube.com/watch?v=RwbhoQ0BH3w&feature=youtu.be">SACNAS webinar on funding within NSF for students</a></li>
 <li><a href="https://docs.google.com/spreadsheets/d/1cHkWrbvNrRdhJL9Z8ucgBZ2HSts2GPA_yozbQPl_x_8/edit#gid=0">ecology, evolution, & quantitative postdoc fellowship opportunities/</a></li>
 </ul>
