added JSMF link

--- a/join/index.html
+++ b/join/index.html
@@ -32,7 +32,9 @@ All lab members must be:
    <li><a href="https://www.hfsp.org/funding/hfsp-funding/postdoctoral-fellowships">Human Frontier Science Program postdoctoral fellowship</a> - intended for interdisiplinary scholars working in the life sciences - due August of each year</li>
    <li><a href="https://schmidtsciencefellows.org/selection/">Schmidt Science Fellows postdoctoral program</a> </li>
    <li><a href="https://conbio.org/mini-sites/smith-fellows">Smith Fellowship program</a> - Conservation-focused award due in October each year</li>
+  <li><a href="https://www.jsmf.org/apply/fellowship/">JSMF's Understanding Dynamic and Multi-scale Systems program</a> - Postdoc fellowship due in June each year</li>
 </ul> 
+
 
 
 <p>If you are interested, please send an email and CV to Easton White (<a href="mailto:Easton.White@unnh.edu">Easton.White@unh.edu</a>). </p>
