added technical education specialist

--- a/join/index.html
+++ b/join/index.html
@@ -37,12 +37,20 @@ All lab members must be:
 
 
 
-<p>If you are interested, please send an email and CV to Easton White (<a href="mailto:Easton.White@unnh.edu">Easton.White@unh.edu</a>). </p>
+<p>If you are interested, please send an email and CV to Easton White (<a href="mailto:Easton.White@unh.edu">Easton.White@unh.edu</a>). </p>
 
 
 
 
 <p>One of my main commitments as a faculty member is promoting and supporting diversity, equity, and inclusion in STEM. Please consider applying for a position in my lab if you are a first-generation college student, a student from a low-income background, a member of a racial or ethnic minority group, if you identify as a woman or as LGBTQ+, and/or if you have a disability.</p>
+
+
+
+<h3><i>Other positions at UNH</i></h3>
+<p>Additional staff and faculty positions at UNH are posted to a <a href="https://jobs.usnh.edu/">online job platform</a> I will highlight here that are relevant to my department and field</p>
+ <ul>
+   <li><a href="https://jobs.usnh.edu/postings/39712">Technical Education Specialist</a> - position in my department for an individual to coordinate and manage biology teaching labs, especially those related to ecology and evolution. I will be working with this person closly given the courses I teach.</li>
+</ul> 
 
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
