updated job text

--- a/join/index.html
+++ b/join/index.html
@@ -47,7 +47,7 @@ All lab members must be:
 
 
 <h3><i>Other positions at UNH</i></h3>
-<p>Additional staff and faculty positions at UNH are posted to a <a href="https://jobs.usnh.edu/">online job platform</a> I will highlight here that are relevant to my department and field</p>
+<p>Additional staff and faculty positions at UNH are posted to a <a href="https://jobs.usnh.edu/">online job platform.</a> I will highlight here the positions that are most relevant to my department and field.</p>
  <ul>
    <li><a href="https://jobs.usnh.edu/postings/39712">Technical Education Specialist</a> - position in my department for an individual to coordinate and manage biology teaching labs, especially those related to ecology and evolution. I will be working with this person closly given the courses I teach.</li>
 </ul> 
